[package]
name = "philiprehberger-clicolor"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Cross-platform terminal color and style output with automatic capability detection"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-clicolor"
keywords = ["color", "terminal", "ansi", "cli", "style"]
categories = ["command-line-interface", "text-processing"]
